# otsdaq_prepmodernization

./: .gitignore  CMakeLists.txt  CMakePresets.json
Data/: otsdaq_quiet_run-2015.txt  otsdaq_quiet_run-mf.txt
Data/ConfigurationInfo/: .directory  DQMHistosConsumerConfigurationInfo.xml  DetectorConfigurationInfo.xml  FEInterfaceConfigurationInfo.xml  FENIMPlusInterfaceConfigurationInfo.xml  FENIMPlusInterfaceOptionalConfigurationInfo.xml  FEToDetectorConfigurationInfo.xml
Data/ConfigurationInfo.updateots.bk/: FENIMPlusInterfaceConfigurationInfo.xml  FENIMPlusInterfaceOptionalConfigurationInfo.xml
Data/MessageFacilityConfigurations/: MessageFacilityGen.fcl  QuietForwarderGen.cfg
Data/RootDisplayConfigData/: 3StripStations.rcfg  FSSRStrips.rcfg
Data/ServiceData/: ActiveConfigurationGroups.cfg  ActiveConfigurationGroups.cfg.1506024182  ActiveConfigurationGroups.cfg.1506024208  ActiveConfigurationGroups.cfg.1507831090  ActiveConfigurationGroups.cfg.1507831211  ActiveConfigurationGroups.cfg.1507835264  ActiveConfigurationGroups.cfg.1508525046  ActiveConfigurationGroups.cfg.1508526326  ActiveConfigurationGroups.cfg.1530643767  ActiveConfigurationGroups.cfg.1530803933  ActiveConfigurationGroups.cfg.1530804122
Data/TableInfo/: FENIMPlusInterfaceOptionalTableInfo.xml  FENIMPlusInterfaceTableInfo.xml
Data/XDAQConfigurations/: otsConfigurationNoRU_CMake.xml  otsConfigurationNoRU_Wizard_CMake_Run.xml
Databases/: README_otsdaq_flatten.txt
Databases/DQMHistosConsumerConfiguration/: index.json
Databases/DataBufferConfiguration/: index.json
Databases/DataManagerConfiguration/: index.json
Databases/DataManagerSupervisorConfiguration/: index.json
Databases/DesktopIconConfiguration/: index.json
Databases/DesktopWindowParameterConfiguration/: index.json
Databases/FEInterfaceConfiguration/: index.json
Databases/FENIMPlusInterfaceConfiguration/: index.json
Databases/FENIMPlusInterfaceOptionalConfiguration/: index.json
Databases/FEOtsUDPTemplateInterfaceConfiguration/: index.json
Databases/FESlowControlsConfiguration/: index.json
Databases/FESupervisorConfiguration/: index.json
Databases/GroupAliasesConfiguration/: index.json
Databases/MessageFacilityConfiguration/: index.json
Databases/RawDataSaverConsumerConfiguration/: index.json
Databases/StateMachineConfiguration/: index.json
Databases/TheSupervisorConfiguration/: index.json
Databases/UDPDataListenerProducerConfiguration/: index.json
Databases/UDPDataStreamerConsumerConfiguration/: index.json
Databases/VersionAliasesConfiguration/: index.json
Databases/XDAQApplicationConfiguration/: index.json
Databases/XDAQApplicationPropertyConfiguration/: index.json
Databases/XDAQContextConfiguration/: index.json
UserWebGUI/: NimPlusWebPath  README  otsdaq_quiet_run-2015.txt  otsdaq_quiet_run-mf.txt
UserWebGUI/html/: CanvasChartTest.html  NimPlus_app.html  NimPlus_app1234.html  NimStream_app.html
UserWebGUI/js/: CanvasLineChart.js  NimPlus_app.js  NimStream_app.js
data_simple/DRS4/: drsosc_externalTrig.cfg
data_simple/Logs/: otsdaq_quiet_run-flatten-suv1.nicadd.niu.edu.txt  otsdaq_quiet_run-flatten-teddy01.dhcp.fnal.gov.txt  otsdaq_quiet_run-gateway-rulinux04.dhcp.fnal.gov-2000.txt  otsdaq_quiet_run-gateway-suv1.nicadd.niu.edu-2000.txt  otsdaq_quiet_run-gateway-teddy01.dhcp.fnal.gov-2000.txt  otsdaq_quiet_run-mf-rulinux04.dhcp.fnal.gov.txt  otsdaq_quiet_run-mf-suv1.nicadd.niu.edu.txt  otsdaq_quiet_run-mf-teddy01.dhcp.fnal.gov.txt  otsdaq_quiet_run-rulinux04.dhcp.fnal.gov-2002.txt  otsdaq_quiet_run-rulinux04.dhcp.fnal.gov-2003.txt  otsdaq_quiet_run-suv1.nicadd.niu.edu-2009.txt  otsdaq_quiet_run-teddy01.dhcp.fnal.gov-2003.txt  otsdaq_quiet_run-wiz-rulinux04.dhcp.fnal.gov.txt  otsdaq_quiet_run-wiz-suv1.nicadd.niu.edu.txt  otsdaq_quiet_run-wiz-teddy01.dhcp.fnal.gov.txt
data_simple/MacroMakerModeConfigurations/: MacroMakerModeFhiclDump.fcl
data_simple/MessageFacilityConfigurations/: ARTDAQInterfaceMessageFacilityGen.fcl  MessageFacilityGen.fcl  MessageFacilityWiz.fcl
otsdaq-prepmodernization/: CMakeLists.txt
tools/: extra_setup_ots_repo.sh  install_ots_repo.sh  update_VM_Demo_Data.sh  update_ots_repo.sh
ups/: product_deps
(+1135 files in other folders)
